--- a/FinanceManager.API/FinanceManager.DAL/packages.config
+++ b/FinanceManager.API/FinanceManager.DAL/packages.config
@@ -7,4 +7,5 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="Unity.WebAPI" version="5.2.3" targetFramework="net452" />
+  <package id="Z.EntityFramework.Plus.QueryIncludeOptimized.EF6" version="1.8.1" targetFramework="net452" />
 </packages>
